ZezeJava: 优化一些锁的内存占用; 修正JDK11编译